--- a/view/index.html
+++ b/view/index.html
@@ -44,7 +44,8 @@
                                         <em>Today</em>
                                     </span>
                                 </div>
-                                <div>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s...</div>
+                                <div>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s...
+                                </div>
                             </a>
                         </li>
                         <li class="divider"></li>
@@ -56,7 +57,8 @@
                                         <em>Yesterday</em>
                                     </span>
                                 </div>
-                                <div>Lorem Ipsum has been the industry's standard dummy text ever since an kwilnw...</div>
+                                <div>Lorem Ipsum has been the industry's standard dummy text ever since an kwilnw...
+                                </div>
                             </a>
                         </li>
                         <li class="divider"></li>
@@ -95,7 +97,8 @@
                                         <span class="pull-right text-muted">60% Complete</span>
                                     </p>
                                     <div class="progress progress-striped active">
-                                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+                                        <div class="progress-bar progress-bar-success" role="progressbar"
+                                            aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
                                             <span class="sr-only">60% Complete (success)</span>
                                         </div>
                                     </div>
@@ -111,7 +114,8 @@
                                         <span class="pull-right text-muted">28% Complete</span>
                                     </p>
                                     <div class="progress progress-striped active">
-                                        <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="28" aria-valuemin="0" aria-valuemax="100" style="width: 28%">
+                                        <div class="progress-bar progress-bar-info" role="progressbar"
+                                            aria-valuenow="28" aria-valuemin="0" aria-valuemax="100" style="width: 28%">
                                             <span class="sr-only">28% Complete</span>
                                         </div>
                                     </div>
@@ -127,7 +131,8 @@
                                         <span class="pull-right text-muted">60% Complete</span>
                                     </p>
                                     <div class="progress progress-striped active">
-                                        <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+                                        <div class="progress-bar progress-bar-warning" role="progressbar"
+                                            aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
                                             <span class="sr-only">60% Complete (warning)</span>
                                         </div>
                                     </div>
@@ -143,7 +148,8 @@
                                         <span class="pull-right text-muted">85% Complete</span>
                                     </p>
                                     <div class="progress progress-striped active">
-                                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%">
+                                        <div class="progress-bar progress-bar-danger" role="progressbar"
+                                            aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%">
                                             <span class="sr-only">85% Complete (danger)</span>
                                         </div>
                                     </div>
@@ -250,13 +256,13 @@
                     <li>
                         <a href="ui-elements.html"><i class="fa fa-desktop"></i> UI Elements</a>
                     </li>
-					<li>
+                    <li>
                         <a href="chart.html"><i class="fa fa-bar-chart-o"></i> Charts</a>
                     </li>
                     <li>
                         <a href="tab-panel.html"><i class="fa fa-qrcode"></i> Tabs & Panels</a>
                     </li>
-                    
+
                     <li>
                         <a href="table.html"><i class="fa fa-table"></i> Responsive Tables</a>
                     </li>
@@ -439,7 +445,7 @@
                         <div class="panel panel-default">
                             <div class="panel-heading">
                                 Responsive Table Example
-                            </div> 
+                            </div>
                             <div class="panel-body">
                                 <div class="table-responsive">
                                     <table class="table table-striped table-bordered table-hover">
@@ -460,6 +466,7 @@
                                                 <td>John15482</td>
                                                 <td>name@site.com</td>
                                             </tr>
+
                                             <tr>
                                                 <td>2</td>
                                                 <td>Kimsila</td>
@@ -504,8 +511,20 @@
 
                     </div>
                 </div>
+                <ul>
+                    {% for user in users %}
+                    <li>{{user.nickname if user.nickname else "暂无"}}</li>
+                    <li>{{user.openid if user.openid else "暂无" }}</li>
+                    <li>{{user.gender if user.gender else "暂无" }}</li>
+                    <li>{{user.mobile if user.mobile else "暂无" }}</li>
+                    {% endfor %}
+                </ul>
+
+
                 <!-- /. ROW  -->
-				<footer><p>All right reserved. Template by: <a href="http://webthemez.com">WebThemez</a></p></footer>
+                <footer>
+                    <p>All right reserved. Template by: <a href="http://webthemez.com">WebThemez</a></p>
+                </footer>
             </div>
             <!-- /. PAGE INNER  -->
         </div>
