--- a/view/welcome.html
+++ b/view/welcome.html
@@ -7,7 +7,7 @@
   <title>Dashboard with Off-canvas Sidebar</title>
   <meta name="generator" content="Bootply" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <link href="/static/css/bootstrap.min2.css" rel="stylesheet">
+  <link href="/static/css/bootstrap.min.2.css" rel="stylesheet">
   <!--[if lt IE 9]>
 			<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
@@ -255,7 +255,7 @@
 
   <!-- script references -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
-  <script src="/static/js/bootstrap.min2.js"></script>
+  <script src="/static/js/bootstrap.min.js"></script>
   <script src="/static/js/scripts.js"></script>
 </body>
 
