--- a/view/404.html
+++ b/view/404.html
@@ -14,14 +14,14 @@
   <title>Defcon - 404 Page</title>
 
   <!-- FAVICON -->
-  <link rel="shortcut icon" href="/assets/images/favicon.png">
+  <link rel="shortcut icon" href="/assets/404/images/favicxon.png">
 
   <!-- FONTS -->
   <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro:400,700&amp;subset=latin-ext" rel="stylesheet">
 
   <!-- STYLESHEETS -->
-  <link rel="stylesheet" type="text/css" href="/static/css/plugins.css">
-  <link rel="stylesheet" type="text/css" href="/static/css/main.css">
+  <link rel="stylesheet" type="text/css" href="/static/404/css/plugins.css">
+  <link rel="stylesheet" type="text/css" href="/static/404/css/main.css">
 
 
 </head>
@@ -52,9 +52,6 @@
       <!-- FOOTER -->
       <div class="footer">
 
-        <!-- <p>© 2017 Your Brand | More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> -
-          Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p> -->
-
       </div>
       <!-- /FOOTER -->
 
@@ -78,8 +75,8 @@
 
 
   <!-- JAVASCRIPTS -->
-  <script type="text/javascript" src="/static/js/plugins.js"></script>
-  <script type="text/javascript" src="/static/js/main.js"></script>
+  <script type="text/javascript" src="/static/404/js/plugins.js"></script>
+  <script type="text/javascript" src="/static/404/js/main.js"></script>
 
 
 </body>
