--- a/view/index.html
+++ b/view/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Free Bootstrap Admin Template : Dream</title>
     <!-- Bootstrap Styles-->
-    <link href="/static/css/bootstrap2.css" rel="stylesheet" />
+    <link href="/static/dream-admin/css/bootstrap3.1.1.css" rel="stylesheet" />
     <!-- FontAwesome Styles-->
-    <link href="/static/css/font-awesome.css" rel="stylesheet" />
+    <link href="/static/dream-admin/css/font-awesome.css" rel="stylesheet" />
     <!-- Morris Chart Styles-->
-    <link href="/static/js/morris/morris-0.4.3.min.css" rel="stylesheet" />
+    <link href="/static/dream-admin/js/morris/morris-0.4.3.min.css" rel="stylesheet" />
     <!-- Custom Styles-->
-    <link href="/static/css/custom-styles.css" rel="stylesheet" />
+    <link href="/static/dream-admin/css/custom-styles.css" rel="stylesheet" />
     <!-- Google Fonts-->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
 </head>
@@ -29,7 +29,7 @@
                 </button>
                 <a class="navbar-brand" href="index.html">Dream</a>
             </div>
-
+    
             <ul class="nav navbar-top-links navbar-right">
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="false">
@@ -44,8 +44,7 @@
                                         <em>Today</em>
                                     </span>
                                 </div>
-                                <div>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s...
-                                </div>
+                                <div>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s...</div>
                             </a>
                         </li>
                         <li class="divider"></li>
@@ -57,8 +56,7 @@
                                         <em>Yesterday</em>
                                     </span>
                                 </div>
-                                <div>Lorem Ipsum has been the industry's standard dummy text ever since an kwilnw...
-                                </div>
+                                <div>Lorem Ipsum has been the industry's standard dummy text ever since an kwilnw...</div>
                             </a>
                         </li>
                         <li class="divider"></li>
@@ -97,8 +95,8 @@
                                         <span class="pull-right text-muted">60% Complete</span>
                                     </p>
                                     <div class="progress progress-striped active">
-                                        <div class="progress-bar progress-bar-success" role="progressbar"
-                                            aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+                                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60"
+                                            aria-valuemin="0" aria-valuemax="100" style="width: 60%">
                                             <span class="sr-only">60% Complete (success)</span>
                                         </div>
                                     </div>
@@ -114,8 +112,8 @@
                                         <span class="pull-right text-muted">28% Complete</span>
                                     </p>
                                     <div class="progress progress-striped active">
-                                        <div class="progress-bar progress-bar-info" role="progressbar"
-                                            aria-valuenow="28" aria-valuemin="0" aria-valuemax="100" style="width: 28%">
+                                        <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="28"
+                                            aria-valuemin="0" aria-valuemax="100" style="width: 28%">
                                             <span class="sr-only">28% Complete</span>
                                         </div>
                                     </div>
@@ -131,8 +129,8 @@
                                         <span class="pull-right text-muted">60% Complete</span>
                                     </p>
                                     <div class="progress progress-striped active">
-                                        <div class="progress-bar progress-bar-warning" role="progressbar"
-                                            aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+                                        <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60"
+                                            aria-valuemin="0" aria-valuemax="100" style="width: 60%">
                                             <span class="sr-only">60% Complete (warning)</span>
                                         </div>
                                     </div>
@@ -148,8 +146,8 @@
                                         <span class="pull-right text-muted">85% Complete</span>
                                     </p>
                                     <div class="progress progress-striped active">
-                                        <div class="progress-bar progress-bar-danger" role="progressbar"
-                                            aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%">
+                                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="85"
+                                            aria-valuemin="0" aria-valuemax="100" style="width: 85%">
                                             <span class="sr-only">85% Complete (danger)</span>
                                         </div>
                                     </div>
@@ -249,7 +247,7 @@
         <nav class="navbar-default navbar-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav" id="main-menu">
-
+    
                     <li>
                         <a class="active-menu" href="index.html"><i class="fa fa-dashboard"></i> Dashboard</a>
                     </li>
@@ -262,15 +260,15 @@
                     <li>
                         <a href="tab-panel.html"><i class="fa fa-qrcode"></i> Tabs & Panels</a>
                     </li>
-
+    
                     <li>
                         <a href="table.html"><i class="fa fa-table"></i> Responsive Tables</a>
                     </li>
                     <li>
                         <a href="form.html"><i class="fa fa-edit"></i> Forms </a>
                     </li>
-
-
+    
+    
                     <li>
                         <a href="#"><i class="fa fa-sitemap"></i> Multi-Level Dropdown<span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
@@ -292,9 +290,9 @@
                                     <li>
                                         <a href="#">Third Level Link</a>
                                     </li>
-
+    
                                 </ul>
-
+    
                             </li>
                         </ul>
                     </li>
@@ -302,15 +300,15 @@
                         <a href="empty.html"><i class="fa fa-fw fa-file"></i> Empty Page</a>
                     </li>
                 </ul>
-
+    
             </div>
-
+    
         </nav>
         <!-- /. NAV SIDE  -->
         <div id="page-wrapper">
             <div id="page-inner">
-
-
+    
+    
                 <div class="row">
                     <div class="col-md-12">
                         <h1 class="page-header">
@@ -319,7 +317,7 @@
                     </div>
                 </div>
                 <!-- /. ROW  -->
-
+    
                 <div class="row">
                     <div class="col-md-3 col-sm-12 col-xs-12">
                         <div class="panel panel-primary text-center no-boder bg-color-green">
@@ -329,7 +327,7 @@
                             </div>
                             <div class="panel-footer back-footer-green">
                                 Daily Visits
-
+    
                             </div>
                         </div>
                     </div>
@@ -341,7 +339,7 @@
                             </div>
                             <div class="panel-footer back-footer-blue">
                                 Sales
-
+    
                             </div>
                         </div>
                     </div>
@@ -353,7 +351,7 @@
                             </div>
                             <div class="panel-footer back-footer-red">
                                 Comments
-
+    
                             </div>
                         </div>
                     </div>
@@ -365,16 +363,16 @@
                             </div>
                             <div class="panel-footer back-footer-brown">
                                 No. of Visits
-
+    
                             </div>
                         </div>
                     </div>
                 </div>
-
-
+    
+    
                 <div class="row">
-
-
+    
+    
                     <div class="col-md-9 col-sm-12 col-xs-12">
                         <div class="panel panel-default">
                             <div class="panel-heading">
@@ -395,10 +393,10 @@
                             </div>
                         </div>
                     </div>
-
+    
                 </div>
                 <!-- /. ROW  -->
-
+    
                 <div class="row">
                     <div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="panel panel-default">
@@ -407,7 +405,7 @@
                             </div>
                             <div class="panel-body">
                                 <div class="list-group">
-
+    
                                     <a href="#" class="list-group-item">
                                         <span class="badge">7 minutes ago</span>
                                         <i class="fa fa-fw fa-comment"></i> Commented on a post
@@ -438,10 +436,10 @@
                                 </div>
                             </div>
                         </div>
-
+    
                     </div>
                     <div class="col-md-8 col-sm-12 col-xs-12">
-
+    
                         <div class="panel panel-default">
                             <div class="panel-heading">
                                 Responsive Table Example
@@ -466,7 +464,6 @@
                                                 <td>John15482</td>
                                                 <td>name@site.com</td>
                                             </tr>
-
                                             <tr>
                                                 <td>2</td>
                                                 <td>Kimsila</td>
@@ -502,26 +499,15 @@
                                                 <td>Wrap4585</td>
                                                 <td>name@site.com</td>
                                             </tr>
-
+    
                                         </tbody>
                                     </table>
                                 </div>
                             </div>
                         </div>
-
+    
                     </div>
                 </div>
-                <ul>
-                    {% for user in users %}
-                    <li>{{user.name if user.name else "暂无"}}</li>
-                    <li>{{user.nickname if user.nickname else "暂无"}}</li>
-                    <li>{{user.openid if user.openid else "暂无" }}</li>
-                    <li>{{user.gender if user.gender else "暂无" }}</li>
-                    <li>{{user.mobile if user.mobile else "暂无" }}</li>
-                    {% endfor %}
-                </ul>
-
-
                 <!-- /. ROW  -->
                 <footer>
                     <p>All right reserved. Template by: <a href="http://webthemez.com">WebThemez</a></p>
@@ -534,16 +520,16 @@
     <!-- /. WRAPPER  -->
     <!-- JS Scripts-->
     <!-- jQuery Js -->
-    <script src="/static/js/jquery-1.10.2.js"></script>
+    <script src="/static/dream-admin/js/jquery-1.10.2.js"></script>
     <!-- Bootstrap Js -->
-    <script src="/static/js/bootstrap.min2.js"></script>
+    <script src="/static/dream-admin/js/bootstrap.min.js"></script>
     <!-- Metis Menu Js -->
-    <script src="/static/js/jquery.metisMenu.js"></script>
+    <script src="/static/dream-admin/jquery.metisMenu.js"></script>
     <!-- Morris Chart Js -->
-    <script src="/static/js/morris/raphael-2.1.0.min.js"></script>
-    <script src="/static/js/morris/morris.js"></script>
+    <script src="/static/dream-admin/js/morris/raphael-2.1.0.min.js"></script>
+    <script src="/static/dream-admin/js/morris/morris.js"></script>
     <!-- Custom Js -->
-    <script src="/static/js/custom-scripts.js"></script>
+    <script src="/static/dream-admin/js/custom-scripts.js"></script>
 
 
 </body>
