--- a/view/sigin_in.html
+++ b/view/sigin_in.html
@@ -1,106 +1,56 @@
-{% block login %}
-<!doctype html>
-<html lang="en">
+{% extends "common/login-layout.html" %}
+{% block main %}
+  <section class="h-100">
+    <div class="container h-100">
+      <div class="row justify-content-md-center h-100">
+        <div class="card-wrapper">
+          <div class="brand">
+            <img src="/static/public/images/logo.png">
+          </div>
+          <div class="card fat">
+            <div class="card-body">
+              <h4 class="card-title">Login</h4>
+              <form method="POST" action="/signin" method="post">
 
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+                <div class="form-group">
+                  <label for="username">E-Mail Address</label>
 
-  <!-- Bootstrap CSS -->
+                  <input  id="user" name="user"  type="text" class="form-control"  value="" required autofocus>
+                </div>
 
-  <title>sugar</title>
-  <!-- FONTS -->
-  <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro:400,700&amp;subset=latin-ext" rel="stylesheet">
+                <div class="form-group">
+                  <label for="password">Password
+                    <a href="forgot.html" class="float-right">
+                      Forgot Password?
+                    </a>
+                  </label>
+                  <input  type="password" id="pass" name="password"  class="form-control" name="password" required data-eye>
+                </div>
 
-  <!-- STYLESHEETS -->
-  <link rel="stylesheet" type="text/css" href="/static/css/bootstrap-theme.min.css">
-  <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.css">
-  <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
-  <!-- FontAwesome Styles-->
-  <link href="/static/css/font-awesome.css" rel="stylesheet" />
-  <link href="/static/css/sigin_in.css" rel="stylesheet">
-</head>
-<style>
-  
-@media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
+                <div class="form-group">
+                  <label>
+                    <input type="checkbox" name="remember"> Remember Me
+                  </label>
+                </div>
 
-</style>
-<body>
-  <!-- <div class="container">
-    <div class="row login-center">
-      <div class="mt-0 mb-0 ml-auto mr-auto">
-        <form class="form-horizontal" action="/signin" method="post">
-          <div class="form-group">
-            <label for="inputEmail3" class="col-lg-2 control-label">User</label>
-            <div class="col-sm-10">
-              <input type="text" class="form-control-plaintext" id="user" name="user" placeholder="user name">
+                <div class="form-group no-margin">
+                  <button type="submit" class="btn btn-primary btn-block">
+                    Login
+                  </button>
+                </div>
+                <div class="margin-top20 text-center">
+                  没有账号? <a href="/registered">注册</a>
+                </div>
+              </form>
             </div>
           </div>
-          <div class="form-group">
-            <label for="inputPassword3" class="col-lg-2 control-label">Password</label>
-            <div class="col-sm-10">
-              <input type="password" class="form-control-plaintext" id="pass" name="password" placeholder="Password">
-            </div>
+          <div class="footer">
+            Copyright &copy; irisEco 2017 - More information <a href="https://github.com/irisEco" target="_blank"
+              title="sugar">sugar</a>
           </div>
-          <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-              <div class="checkbox">
-                <label>
-                  <input type="checkbox"> Remember me
-                </label>
-              </div>
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-              <button type="submit" id="login" class="btn btn-default" onsubmit="login">Sign in</button>
-            </div>
-          </div>
-        </form>
+        </div>
       </div>
     </div>
-  </div> -->
-
-
-
-<form class="form-signin" action="/signin" method="post">
-  <img class="mb-4" src="/docs/4.3/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
-  <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-  <label for="inputEmail" class="sr-only">username</label>
-  <input type="text"  id="user" name="user" class="form-control" placeholder="user name" required="" autofocus="">
-  <label for="inputPassword" class="sr-only">Password</label>
-  <input type="password" id="pass" name="password" class="form-control" placeholder="Password" required="">
-  <div class="checkbox mb-3">
-    <label>
-      <input type="checkbox" value="remember-me"> Remember me
-    </label>
-  </div>
-  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-  <p class="mt-5 mb-3 text-muted">© 2017-2019</p>
-</form>
-
-
-
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"
-    integrity="sha384-L2pyEeut/H3mtgCBaUNw7KWzp5n9+4pDQiExs933/5QfaTh8YStYFFkOzSoXjlTb"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
-</body>
-
-
-</html>
-
+  </section>
+   
 {% endblock %}
