调整样式  创建种子数据

--- a/view/base.html
+++ b/view/base.html
@@ -1,37 +1,24 @@
 <!DOCTYPE html>
 <header>
-  <!-- META -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-
-  <!-- PAGE TITLE -->
-  <title></title>
-
-  <!-- FAVICON -->
-  <link rel="shortcut icon" href="/assets/images/favicon.png">
-
-  <!-- FONTS -->
-  <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro:400,700&amp;subset=latin-ext" rel="stylesheet">
-
-  <!-- STYLESHEETS -->
-  <link rel="stylesheet" type="text/css" href="/static/css/bootstrap-theme.min.css">
-  <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Free Bootstrap Admin Template : Dream</title>
   <!-- Bootstrap Styles-->
-  <link href="/static/css/bootstrap2.css" rel="stylesheet" />
+  <link href="/static/dream-admin/css/bootstrap3.1.1.css" rel="stylesheet" />
   <!-- FontAwesome Styles-->
-  <link href="/static/css/font-awesome.css" rel="stylesheet" />
+  <link href="/static/dream-admin/css/font-awesome.css" rel="stylesheet" />
   <!-- Morris Chart Styles-->
-  <link href="/static/js/morris/morris-0.4.3.min.css" rel="stylesheet" />
+  <link href="/static/dream-admin/js/morris/morris-0.4.3.min.css" rel="stylesheet" />
   <!-- Custom Styles-->
-  <link href="/static/css/custom-styles.css" rel="stylesheet" />
+  <link href="/static/dream-admin/css/custom-styles.css" rel="stylesheet" />
   <!-- Google Fonts-->
   <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
   <style>
-    .sidebar-collapse .nav>li>a {
+    /* .sidebar-collapse .nav>li>a {
       color: #fff;
       background: #09182a;
       text-shadow: none;
-    }
+    } */
   </style>
 </header>
 
@@ -352,20 +339,19 @@
     <!-- /. PAGE WRAPPER  -->
   </div>
   {% endblock %}
-</body>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
-<script src="/static/js/bootstrap.min.js"></script>
-<!-- JS Scripts-->
-<!-- jQuery Js -->
-<script src="/static/js/jquery-1.10.2.js"></script>
-<!-- Bootstrap Js -->
-<script src="/static/js/bootstrap.min2.js"></script>
-<!-- Metis Menu Js -->
-<script src="/static/js/jquery.metisMenu.js"></script>
-<!-- Morris Chart Js -->
-<script src="/static/js/morris/raphael-2.1.0.min.js"></script>
-<script src="/static/js/morris/morris.js"></script>
-<!-- Custom Js -->
-<script src="/static/js/custom-scripts.js"></script>
 
+    <!-- /. WRAPPER  -->
+    <!-- JS Scripts-->
+    <!-- jQuery Js -->
+    <script src="/static/dream-admin/js/jquery-1.10.2.js"></script>
+    <!-- Bootstrap Js -->
+    <script src="/static/dream-admin/js/bootstrap.min.js"></script>
+    <!-- Metis Menu Js -->
+    <script src="/static/dream-admin/js/jquery.metisMenu.js"></script>
+    <!-- Morris Chart Js -->
+    <script src="/static/dream-admin/js/morris/raphael-2.1.0.min.js"></script>
+    <script src="/static/dream-admin/js/morris/morris.js"></script>
+    <!-- Custom Js -->
+    <script src="/static/dream-admin/js/custom-scripts.js"></script>
+</body>
 </html>
